# Lead_Generation

./: README.md  pyproject.toml
src/lead_score_flow/: main.py  types.py
src/lead_score_flow/crews/lead_response_crew/: lead_response_crew.py
src/lead_score_flow/crews/lead_response_crew/config/: agents.yaml  tasks.yaml
src/lead_score_flow/crews/lead_score_crew/: lead_score_crew.py
src/lead_score_flow/crews/lead_score_crew/config/: agents.yaml
src/lead_score_response/: main.py  types.py
src/lead_score_response/crews/lead_score_crew/: lead_score_crew.py
