[project]
name = "lead_score_response"
version = "0.1.0"
description = "Lead_Score_Response using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
lead_score_response = "lead_score_response.main:run"
run_crew = "lead_score_response.main:run"
train = "lead_score_response.main:train"
replay = "lead_score_response.main:replay"
test = "lead_score_response.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
